[package]
name = "cargo-sysdeps"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
flate2 = "1.1"
ureq = "2.10"
syn = { version = "2.0", features = ["full", "visit"] }
tar = "0.4"
walkdir = "2.5"
